--- a/src/styles/ViewReportsPage.css
+++ b/src/styles/ViewReportsPage.css
@@ -2,8 +2,8 @@
     width: 90%;
     margin: 0 auto;
     padding: 20px 0;
-
 }
+
 .new-repit-submit-div {
     margin-bottom: 20px;
     display: flex;
@@ -24,7 +24,7 @@
     background-color: #043c6c;
 }
 
-.swtich-content-buttons-div {
+.switch-content-buttons-div {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -32,24 +32,31 @@
 
 .switch-content-btn {
     background-color: #fff;
-    border: 1px solid #ccc; 
-    border-bottom: none; 
+    border: 1px solid #ccc;
+    border-bottom: none;
     padding: 10px 20px;
-    border-radius: 5px 5px 0 0; 
+    border-radius: 10px 10px 0 0;
     cursor: pointer;
     margin: 0;
     width: 50%;
 }
-
 
 .switch-content-btn:hover {
     background-color: #043c6c;
     color: #fff;
 }
 
+.switch-content-btn.active,
+.switch-content-btn.active:hover {
+    background-color: #043c6c;
+    color: #fff;
+}
+
 .main-content {
+    flex-grow: 1; /* Take up the remaining space */
     display: flex;
     justify-content: center;
+    box-shadow: #ccc 0px 0px 10px;
 }
 
 .Active-div,
