--- a/src/styles/ReportsComponent.css
+++ b/src/styles/ReportsComponent.css
@@ -2,7 +2,8 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     margin: 10px;
-    box-shadow: #ccc 0px 0px 2px;
+    box-shadow: #ccc 0px 0px 10px;
+    width: 90%;
 }
 
 .report-top {
@@ -38,6 +39,16 @@
     margin-left: 10px;
 }
 
+.report-bottom-right-span {
+    font-size: 10px;
+}
+
+.report-bottom-right-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .report-bottom img {
     max-width: 100%;
     height: auto;
@@ -46,15 +57,14 @@
 
 .report-title {
     font-weight: bold;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 }
 
 .description {
     margin-top: 5vh;
     font-size: 10px;
-    max-width: 200px; 
+    max-width: 200px;
 }
-
 
 .report-image {
     width: 100px;
@@ -66,6 +76,7 @@
     height: 10px;
     border-radius: 50%;
     margin-right: 5px;
+    margin-left: 5px;
 }
 
 .dot-unread {
@@ -109,7 +120,7 @@
     margin: 10px 10px 10px 10px;
 }
 
-.popup-description-content{
+.popup-description-content {
     margin-right: 20px;
     margin-top: 10px;
 }
@@ -121,7 +132,7 @@
 .close {
     position: absolute;
     top: 1px;
-    right: 10px; 
+    right: 10px;
     cursor: pointer;
     font-size: 35px;
 }
