--- a/src/styles/UploadPhoto.css
+++ b/src/styles/UploadPhoto.css
@@ -1,6 +1,6 @@
 
 .image{
-    width: 10rem;
+    width: 100%;
     height: 10rem;
 }
 
@@ -10,4 +10,28 @@
     display: flex;
     flex-direction: column;
     place-items: center;
+    gap: 1rem;
+}
+
+.button-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.upload-button{
+    background-color: black;
+    height: 2.5rem;
+    width: 85%;
+    border-radius: 10px;
+    color: white;
+}
+
+.clear-button{
+    background-color: black;
+    height: 2.5rem;
+    width: 13%;
+    border-radius: 10px;
+    color: white;
 }
