adjusted CSS for no report or histroy

--- a/src/styles/ViewReportsPage.css
+++ b/src/styles/ViewReportsPage.css
@@ -76,3 +76,10 @@
 .History-div {
     display: block;
 }
+
+.no-content{
+  margin-top: 25vh;
+  font-size: 18px;
+  color: #555; 
+  text-align: center;
+}
